Добавил модуль Tdlib — статически для iOS, динамически для Android

--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DecomposeTdlibProject</string>
+    <string name="title_messengerdynamicfeature">Messenger Dynamic Feature</string>
 </resources>
